examples/jrExamples/klee-out-0/test000003.assert.err
Error: ASSERTION FAIL: x <= 3
File: /home/soha/git/tracerXMaster/tracerx/examples/jrExamples/add.c
Line: 25
assembly.ll line: 91
Stack: 
	#000000091 in main () at /home/soha/git/tracerXMaster/tracerx/examples/jrExamples/add.c:25
