examples/jrExamples/klee-out-0/test000003.pc
array p1[4] : w32 -> w8 = symbolic
array p2[4] : w32 -> w8 = symbolic
array p3[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Slt 8
                  (ReadLSB w32 0 p1)))
         (Slt 8
              (ReadLSB w32 0 p2))
         (Slt 8
              (ReadLSB w32 0 p3))]
        false)
